# newstui

./: .gitignore  README.md  pyproject.toml  setup.cfg
newscli/: analysis.py  app.py  article.py  config.py  rss.py
tests/: test_article.py  test_kitty.py
