[metadata]
name = newscli
version = 0.1.0
description = Terminal TUI news reader with author display and content-based bias heuristics.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    textual>=0.63.0
    httpx>=0.27.0
    feedparser>=6.0.11
    vaderSentiment>=3.3.2
    beautifulsoup4>=4.12.3

[options.entry_points]
console_scripts =
    news = newscli.__main__:main
